# Image-Morphing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h.in  image-morphing.sln  imgui.ini
Media/: README-media.md
examples/: source.edges  target.edges
image-morphing/: image-morphing.vcxproj  image-morphing.vcxproj.filters  imgui.ini
image-morphing/src/: edge.h  main.cpp  pixel.h
image-morphing/src/dlib/: source.cpp
src/: main.cpp  utils.cpp  utils.h
src/core/: color.h  edge.cpp  edge.h  image.cpp  image.h  point.cpp  point.h  texture.cpp  texture.h
src/imgui/: imgui.cpp  imgui_stdlib.cpp
src/shaders/: morph.compute
